src-tauri/tests/snapshots/git_integration__diff_metadata__copy_staged_files.snap
---
source: tests/git_integration.rs
expression: "&diff.files"
---
[
    DiffFile {
        path: "copied.txt",
        old_path: None,
        status: "A",
        additions: 3,
        deletions: 0,
        is_binary: false,
        old_mode: None,
        new_mode: Some(
            33188,
        ),
        similarity: None,
        is_symlink: false,
        is_submodule: false,
    },
]
